external/cloud2023/kubernetes/research/cloud-dynamics-applications/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-dynamics
  annotations:
    linkerd.io/inject: enabled
